# m-queens

./: .gitignore  CMakeLists.txt  Makefile  README.md  analyze.sh  bin2h.cmake  build_linux.sh  claccell.cl  claccell.cpp  claccell.h  clqueens.cl  clqueens_amd.cl  clqueens_final.cl  clqueens_pre.cl  clsolver.cpp  clsolver.h  cpusolver.cpp  cpusolver.h  filereader.cpp  filereader.h  isolver.h  main.c  main.cpp  presolver.cpp  presolver.h  result_file.cpp  result_file.h  serialize_util.cpp  serialize_util.h  solverstructs.h  start_file.cpp  start_file.h  start_file_handler.cpp  start_file_handler.h  summer.py
boinc/: README.md  app_info.xml  main.cpp
cxxopts/include/: cxxopts.hpp
presolver/: main.cpp
scripts/: build_boinc.sh  build_windows.sh  build_windows_release.sh  install_deps_msys2.sh
